Small styling fixes (remove hover effect on mobile, centre answer list, fix height)

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ h1 {
   width: 1000px;
   height: 400px;
   margin: 20px auto;
+  overflow: hidden;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -27,8 +28,8 @@ h1 {
 }
 
 .question-title {
-  width: 70%;
-  margin: 30% auto;
+  width: 75%;
+  margin: 25% auto;
   line-height: 1.3;
 }
 
@@ -36,7 +37,7 @@ h1 {
   background-color: black;
   color: white;
   display: inline;
-  font-size: 50px;
+  font-size: 45px;
   text-align: center;
   padding: 4px;
   box-shadow: -7px 0px black, 7px 0px black;
@@ -58,7 +59,7 @@ h1 {
 
 .answer-list {
   width: 50%;
-  margin: 50px auto;
+  margin: 60px auto 0px auto;
 }
 
 .answer-list h3 {
@@ -70,7 +71,7 @@ input[type="radio"] {
 }
 
 .answer-option {
-  padding: 50px 0px 0px;
+  padding: 25px 0px 25px 0px;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 25px;
@@ -79,10 +80,6 @@ input[type="radio"] {
 
 .answer-option:hover {
   color: #cc5500;
-}
-
-.answer-option:checked {
-  color: gray;
 }
 
 .answer h4 {
@@ -101,6 +98,7 @@ input[type="radio"] {
   display: inline;
   padding: 0px 20px;
   font-weight: 300;
+  text-align: center;
 }
 
 .previous-question, .next-question {
@@ -124,7 +122,7 @@ input[type="radio"] {
 @media (max-width: 600px) {
   .game-container {
     width: 100%;
-    height: auto;
+    height: 800px;
     flex-flow: column nowrap;
     align-items: center;
     margin: 0px auto;
@@ -132,5 +130,10 @@ input[type="radio"] {
 
   .question, .answer {
     width: 100%;
+    height: 50%;
+  }
+
+  .answer-option:hover {
+    color: black;
   }
 }
